tests-integration/tests/roundtrip/invalid/semantic/typecheck/bool_var_in_arith_expr/bool_var_in_arith_expr.essence
letting x be false
find y : int
such that 4 + x = y